--- a/data/release_posts/unreleased/usability_improvements.yml
+++ b/data/release_posts/unreleased/usability_improvements.yml
@@ -11,8 +11,8 @@ tertiary:
 
       In GitLab 15.5, we're shipping usability improvements for issues, projects, milestones, and much more! We highlight the following changes in GitLab 15.5:
 
-      - [Improve Package settings loading screen](https://gitlab.com/gitlab-org/gitlab/-/issues/372874).
-      - [Improve modal copy when deleting the last package assets](https://gitlab.com/gitlab-org/gitlab/-/issues/368908).
+      - [Improve Package settings loading screen](https://gitlab.com/gitlab-org/gitlab/-/issues/372874)
+      - [Improve modal copy when deleting the last package assets](https://gitlab.com/gitlab-org/gitlab/-/issues/368908)
       - [Separate issue actions from the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/96260)
       - [Improved layout for comments in the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95824)
       - [Remove user status and availability from the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95796)
