--- a/data/release_posts/unreleased/performance_improvements.yml
+++ b/data/release_posts/unreleased/performance_improvements.yml
@@ -12,6 +12,6 @@ tertiary:
 
       - [Convert stylesheets/pages/clusters.scss into a page-specific bundle](https://gitlab.com/gitlab-org/gitlab/-/issues/239803).
       - [Use the creation timestamp returned by the Container Registry API in cleanup policies](https://gitlab.com/groups/gitlab-org/-/epics/8379).
-      - [Redundant Vulnerabilities::StateTransition records that don't actually present a state transition.](https://gitlab.com/gitlab-org/gitlab/-/issues/373808)
+      - [Redundant Vulnerabilities::StateTransition records that don't actually present a state transition](https://gitlab.com/gitlab-org/gitlab/-/issues/373808)
       - [Loading a specific epic is extremely slow, participants fails](https://gitlab.com/gitlab-org/gitlab/-/issues/362944)
       - [Migrate API Security analyzer to .NET 6](https://gitlab.com/gitlab-org/gitlab/-/issues/345188)
