--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -8,7 +8,7 @@ tertiary:
     # Structure: For consistency, do not end your [Description] with a period as not all titles will be complete sentences
     description: |
       Some of the notable bug fixes in 15.5 are:
-      - [Progressively load CI/CD variable for 100+](https://gitlab.com/gitlab-org/gitlab/-/issues/372728)
+      - [Progressively load CI/CD variables when there are more than 100 results](https://gitlab.com/gitlab-org/gitlab/-/issues/372728)
       - [Container Registry only showing 100 tags per image](https://gitlab.com/gitlab-org/gitlab/-/issues/359277)
       - [NuGet packages with uppercase characters cannot be found](https://gitlab.com/gitlab-org/gitlab/-/issues/273664)
       - [Group permissions do not allow project moves between namespaces](https://gitlab.com/gitlab-org/gitlab/-/issues/296817)
