--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -26,7 +26,7 @@ tertiary:
       - [Gitlab Migration fails systematically with some data not being migrated](https://gitlab.com/gitlab-org/gitlab/-/issues/367915)
       - [Validate source type in Gitlab Migration](https://gitlab.com/gitlab-org/gitlab/-/issues/374693)
       - [Set BulkImports::Tracker as skipped if entity is failed](https://gitlab.com/gitlab-org/gitlab/-/issues/375100)
-      - [Github import: incorrect amount of imported issues in import status endpoint](https://gitlab.com/gitlab-org/gitlab/-/issues/353583)
+      - [Github import: incorrect number of imported issues in import status endpoint](https://gitlab.com/gitlab-org/gitlab/-/issues/353583)
       - [Missing objects for imported Github repo when github api rate limit is reached](https://gitlab.com/gitlab-org/gitlab/-/issues/354848)
       - [Incorrect "environments" API endpoint path in GitLab UI results in "There was an error fetching the environments information"](https://gitlab.com/gitlab-org/gitlab/-/issues/372349)
       - [Account owner being removed results in a group with no owner](https://gitlab.com/gitlab-org/gitlab/-/issues/367510)
