--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -46,7 +46,7 @@ tertiary:
       - [Epic errors when loading child issues and epics for signed out users](https://gitlab.com/gitlab-org/gitlab/-/issues/376303)
       - [Project autocomplete members/commands NoMethodError](https://gitlab.com/gitlab-org/gitlab/-/issues/376088)
       - [TODOs APIs failing when todo's target_type is WorkItem](https://gitlab.com/gitlab-org/gitlab/-/issues/374954)
-      - [Filtering roadmap by milestone returns &quot;Something went wrong while fetching epics&quot;](https://gitlab.com/gitlab-org/gitlab/-/issues/370630)
+      - [Filtering roadmap by milestone returns "Something went wrong while fetching epics"](https://gitlab.com/gitlab-org/gitlab/-/issues/370630)
       - [API Security string values are not escaped by the GraphQlAstPrinter](https://gitlab.com/gitlab-org/gitlab/-/issues/374981)
       - [API Security GraphQL Schema doesn't support a GraphQL endpoind of / (slash)](https://gitlab.com/gitlab-org/gitlab/-/issues/374715)
       - [Reduce API Security XML external entity vulnerability false positives](https://gitlab.com/gitlab-org/gitlab/-/issues/374690)
