--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -16,7 +16,7 @@ tertiary:
       - [Fix empty password submitting failure on admin editing user page](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/99042)
       - [Invalid current password error not shown when 2FA setting is on for group](https://gitlab.com/gitlab-org/gitlab/-/issues/346494)
       - [Fix crash if createAlert dismissed multiple times](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/99494)
-      - [Fix Potential for high memory consumption by negative caching](https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent/-/issues/171)
+      - [Fix potential for high memory consumption by negative caching](https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent/-/issues/171)
       - [Fix KAS CI/CD Tunnels to work for projects/groups outside of the group with the agent config](https://gitlab.com/gitlab-org/gitlab/-/issues/346566)
       - [The Wiki rich text editor preserves new lines between lists and tables](https://gitlab.com/gitlab-org/gitlab/-/issues/354795)
       - [Wiki pages set as the project landing page display Asciidoc links correctly](https://gitlab.com/gitlab-org/gitlab/-/issues/254796)
