--- a/data/team_members/person/m/michal-zajac.yml
+++ b/data/team_members/person/m/michal-zajac.yml
@@ -29,8 +29,8 @@ story: |
   probably be walking and reading at the same time.
 projects:
   gitlab:
-  - trainee_maintainer database
-  - trainee_maintainer backend
+  - reviewer database
+  - reviewer backend
   security-report-schemas:
   - trainee_maintainer backend
 domain_expertise:
