Update DevOps Tools internal links

--- a/data/topic_children/devops-tools-explained.yml
+++ b/data/topic_children/devops-tools-explained.yml
@@ -10,7 +10,7 @@ body: >-
   
    [DevOps](/topics/devops/) aims to bridge the gap between application development and IT operations to allow organizations to create better software faster than ever before. DevOps tools and platforms provide a framework to empower teams to plan, build, deploy, monitor, and keep track of operations and feedback. Without these tools and platforms, organizations would have an increasingly difficult task managing software development lifecycles as the complexity and scale of the systems they’re developing increase. 
    
-  [DevOps tools](/devops-tools/) are applications that help to streamline the process of developing software. Most DevOps tools focus on one or more of the following areas:-
+  [DevOps tools](/competition/) are applications that help to streamline the process of developing software. Most DevOps tools focus on one or more of the following areas:-
 
   
   - Communication and collaboration
