--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -53,3 +53,6 @@ tertiary:
       - [Auditors cannot see group CI/CD Runners](https://gitlab.com/gitlab-org/gitlab/-/issues/357328)
       - [Searching by excluded extension only excludes the first extension](https://gitlab.com/gitlab-org/gitlab/-/issues/273162)
       - [Prevent users from entering negative number of replicas in Advanced Search settings](https://gitlab.com/gitlab-org/gitlab/-/issues/245219)
+      - [Squash commit message does not honor regex settings](https://gitlab.com/gitlab-org/gitlab/-/issues/345359)
+      - [500 Error viewing a single large commit](https://gitlab.com/gitlab-org/gitlab/-/issues/342703)
+      - [Codeowners approver list not showing correctly](https://gitlab.com/gitlab-org/gitlab/-/issues/329214)
