Fix small typo on top 2021 contributors

--- a/data/top_contributors_2021.yml
+++ b/data/top_contributors_2021.yml
@@ -160,7 +160,7 @@
   merged_mrs: 16
 -
   category: Star
-  name: "Daniel SchÃ¶mer"
+  name: "Daniel Schömer"
   gitlab: https://gitlab.com/quatauta
   merged_mrs: 15
 -
