Add 15.5 MVP to list

--- a/data/mvps.yml
+++ b/data/mvps.yml
@@ -1,3 +1,8 @@
+- version: '15.5'
+  name: Anatoli Babenia
+  gitlab: abitrolly
+  date: 'October 22, 2022'
+  post: '/releases/2022/10/22/gitlab-15-5-released/#mvp'
 - version: '15.4'
   name: Lennard Sprong
   gitlab: X_Sheep
