add Gaby Berkman to GitLab team page

--- a/data/team_members/person/g/gberkman.yml
+++ b/data/team_members/person/g/gberkman.yml
@@ -1,17 +1,21 @@
 name: Gaby Berkman
 locality: 
 country: Remote
-role: <a href="">Product Marketing Manager</a>
+role: <a href="/job-families/marketing/analysts-relations-manager/">Analyst Relations
+  Manager</a>
 reports_to: lclymer
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: gabyberkman.jpg
+pronouns: she/her
 pronunciation:
-twitter:
-linkedin:
+twitter: Gabyberk
+linkedin: gaby-berkman-4496b513/
 gitlab: gberkman
 departments:
   - Product Marketing
+  - Market Insights 
+  - Marketing 
+  - Portfolio Marketing
 specialty: ""
 expertise:
-story:
+story: Gaby is a communications and analyst relations professional with over a decade of experience, specializing in open source and emerging technology. Outside of work, she loves to take and coach group fitness classes, read, bake/cook, go birding, and spend time with her dog and family. 
 
