--- a/data/release_posts/unreleased/release-update-a-release-through-releasecli.yml
+++ b/data/release_posts/unreleased/release-update-a-release-through-releasecli.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Update a Release through Release-CLI"
+  - name: "Update a release using the Release CLI"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/#amazing'
