--- a/data/team_members/person/i/idawson.yml
+++ b/data/team_members/person/i/idawson.yml
@@ -7,6 +7,8 @@ picture: isaacdawson.jpeg
 gitlab: idawson
 twitter: _wirepair
 pronouns: he/him
+projects:
+  secure-DS-gemnasium-db: maintainer
 departments:
 - Engineering Function
 - Development Department
