--- a/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
+++ b/data/release_posts/unreleased/manage-github-importer--scrape-images-to-gitlab-and-update-markdow.yml
@@ -11,7 +11,7 @@ features:
     - Importers
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/18052'
     description: |
-      When importing projects from GitHub, you can now import project image resources and other attachments types from release notes and comments. The attachments are
+      When importing projects from GitHub, you can now import project image resources and other attachment types from release notes and comments. The attachments are
       added to GitLab and their links are updated to new GitLab URLs.
 
       Because importing attachments can take a long time, they aren't imported by default. To import them, go to the GitHub import page,
