--- a/data/release_posts/unreleased/release-create-annotated-tags-with-releases-ui.yml
+++ b/data/release_posts/unreleased/release-create-annotated-tags-with-releases-ui.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Create annotated tags with the Releases UI"
+  - name: "Create annotated tags in the Releases page"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/user/project/releases/#create-a-release-in-the-releases-page'
