--- a/data/release_posts/unreleased/release-create-annotated-tags-with-releases-ui.yml
+++ b/data/release_posts/unreleased/release-create-annotated-tags-with-releases-ui.yml
@@ -12,4 +12,4 @@ features:
     - Release Orchestration
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/362481'
     description: |
-      We have added the ability to create an annotated tag when creating a release in the UI. Now, when creating a release, you can include optional text that will be used to create an annotated tag. This enables you to include relevant information along with the new tag, so downstream users and applications can have additional context.
+      You can now create annotated tags and add them to your releases in the Releases page. You can use annotated tags to provide downstream users and applications with additional information about a release.
