Add maintainers to Browserker

--- a/data/team_members/person/a/atiwari71.yml
+++ b/data/team_members/person/a/atiwari71.yml
@@ -18,6 +18,7 @@ departments:
 projects:
   gitlab: reviewer backend
   secure-coverage-fuzzing: maintainer backend 
+  secure-browser-based-dast: maintainer
 specialty: Dynamic Analysis
 expertise:
 story:
